log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 11:26:33 AM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f460e3d
Fri 31 Mar 2023 11:30:22 AM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:19: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   18 |   nuevaLista.size = NULL;
      |                   ^
arraylist.c:15:13: error: variable ‘nuevaLista’ set but not used [-Werror=unused-but-set-variable]
   15 |   ArrayList nuevaLista;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d78fbf5
Fri 31 Mar 2023 11:31:48 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:20:10: error: function returns address of local variable [-Werror=return-local-addr]
   20 |   return &nuevaLista;
      |          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b234502
Fri 31 Mar 2023 11:32:01 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:20:10: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   20 |   return nuevaLista;
      |          ^~~~~~~~~~
arraylist.c:21:1: error: control reaches end of non-void function [-Werror=return-type]
   21 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f8e432d
Fri 31 Mar 2023 11:36:20 AM UTC: 
 arraylist.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|6
total_score: 0/70
93d5b76
Fri 31 Mar 2023 11:37:43 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:10: error: unused variable ‘data’ [-Werror=unused-variable]
   16 |   void **data = (void*) malloc (sizeof(void));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
e3ff221
Fri 31 Mar 2023 11:37:56 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:10: error: unused variable ‘data’ [-Werror=unused-variable]
   18 |   void **data = (void*) malloc (sizeof(void));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
a345e5a
Fri 31 Mar 2023 11:38:28 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:3: error: ‘data’ undeclared (first use in this function)
   16 |   data = (void*) malloc (sizeof(void));
      |   ^~~~
arraylist.c:16:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
081d261
Fri 31 Mar 2023 11:38:43 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2a2db59
Fri 31 Mar 2023 11:43:31 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b2efd4c
Fri 31 Mar 2023 11:43:43 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
95745cb
Fri 31 Mar 2023 11:44:00 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:20: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   19 |   nuevaLista->size = NULL;
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
5c4327e
Fri 31 Mar 2023 11:44:14 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
579aa81
Fri 31 Mar 2023 11:44:21 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d484b4a
Fri 31 Mar 2023 11:46:35 AM UTC: 
 arraylist.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|6
total_score: 0/70
9cfaa3f
